.k8s/adminService-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminservice
  template:
    metadata:
      labels:
        app: adminservice
    spec:
      containers:
        - name: adminservice
          image: tavernhelios/adminservice
          ports:
            - containerPort: 5068
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: adminservice
spec:
  selector:
    app: adminservice
  ports:
    - name: web
      port: 5068
      targetPort: 5068
      nodePort: 32051
  type: NodePort
