.k8s/authService-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: ghcr.io/lavliet2/authservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5067
      imagePullSecrets:
        - name: ghcr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  type: NodePort
  selector:
    app: authservice
  ports:
    - protocol: TCP
      port: 5067
      targetPort: 5067
      nodePort: 32049
