.k8s/grafana-monitoring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-monitoring
  template:
    metadata:
      labels:
        app: grafana-monitoring
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
            - name: grafana-provisioning
              mountPath: /etc/grafana/provisioning
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-monitoring-pvc
        - name: grafana-provisioning
          configMap:
            name: grafana-provisioning-config
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-monitoring
spec:
  selector:
    app: grafana-monitoring
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      nodePort: 32052
  type: NodePort
