.k8s/menuservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menuservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menuservice
  template:
    metadata:
      labels:
        app: menuservice
    spec:
      containers:
        - name: menuservice
          image: ghcr.io/lavliet2/menuservice:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: menuservice
spec:
  selector:
    app: menuservice
  ports:
    - protocol: TCP
      port: 5041  
      targetPort: 8082  
      nodePort: 32041
