.k8s/mongoMenuService-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-menuservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-menuservice
  template:
    metadata:
      labels:
        app: mongo-menuservice
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-menu-pv
      volumes:
        - name: mongo-menu-pv
          persistentVolumeClaim:
            claimName: mongo-menuservice-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-menuservice
spec:
  type: NodePort
  selector:
    app: mongo-menuservice
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 32045
