.k8s/postgresAuth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-auth
  template:
    metadata:
      labels:
        app: postgres-auth
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-auth-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth
spec:
  type: NodePort
  selector:
    app: postgres-auth
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 32048
