.k8s/prometheus-monitoring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-monitoring
  template:
    metadata:
      labels:
        app: prometheus-monitoring
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-monitoring
spec:
  selector:
    app: prometheus-monitoring
  ports:
    - name: web
      port: 9090
      targetPort: 9090
      nodePort: 32053
  type: NodePort
