.k8s/tavernhelios-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tavernhelios-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tavernhelios-client
  template:
    metadata:
      labels:
        app: tavernhelios-client
    spec:
      containers:
        - name: tavernhelios-client
          image: ghcr.io/lavliet2/heliostavern-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-secret 

---
apiVersion: v1
kind: Service
metadata:
  name: tavernhelios-client-service
spec:
  type: NodePort
  selector:
    app: tavernhelios-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32040
