.k8s/tavernhelios-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tavernhelios-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tavernhelios-server
  template:
    metadata:
      labels:
        app: tavernhelios-server
    spec:
      containers:
        - name: tavernhelios-server
          image: ghcr.io/lavliet2/heliostavern-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080  # HTTP
            - containerPort: 8443 
          volumeMounts:
            - name: tls-certs
              mountPath: "/app/certs"
              readOnly: true   
      volumes:
        - name: tls-certs
          secret:
            secretName: heliostavern-tls                         
      imagePullSecrets:
        - name: ghcr-secret 

---
apiVersion: v1
kind: Service
metadata:
  name: tavernhelios-server-service
spec:
  type: NodePort
  selector:
    app: tavernhelios-server
  ports:
    - name: http  
      protocol: TCP
      port: 8080      
      targetPort: 8080  
      nodePort: 32041  
    - name: https
      protocol: TCP
      port: 8443      
      targetPort: 8443  
      nodePort: 32040
