.k8s/weatherService-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weatherservice
  template:
    metadata:
      labels:
        app: weatherservice
    spec:
      containers:
        - name: weatherservice
          image: ghcr.io/lavliet2/weatherservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5069
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: weatherservice
spec:
  type: NodePort
  selector:
    app: weatherservice
  ports:
    - protocol: TCP
      port: 5069
      targetPort: 5069
      nodePort: 32059
