.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tavernhelios-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: heliostavern-client.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tavernhelios-client-service
            port:
              number: 5041
  - host: heliostavern-api.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tavernhelios-server-service
            port:
              number: 5040
