.k8s/tavernhelios-ingress copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tavernhelios-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx 
  rules:
    - host: heliostavern.local
      http:
        paths:
          # Бэкенд работает по HTTP
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tavernhelios-server-service
                port:
                  number: 5040

          - path: /
            pathType: Prefix
            backend:
              service:
                name: tavernhelios-server-service
                port:
                  number: 5040

          # gRPC-сервисы
          - path: /menu
            pathType: Prefix
            backend:
              service:
                name: menuservice
                port:
                  number: 5064 

          - path: /reservation
            pathType: Prefix
            backend:
              service:
                name: reservationservice
                port:
                  number: 5065
