.k8s/tavernhelios-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tavernhelios-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"    
spec:
  ingressClassName: nginx
  rules:
  - host: tavernhelios.duckdns.org
    http:
      paths:
      - path: /hubs/reservations
        pathType: Prefix
        backend:
          service:
            name: tavernhelios-server-service
            port:
              number: 5555
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: tavernhelios-server-service
            port:
              number: 5555
      - path: /menuservice
        pathType: Prefix
        backend:
          service:
            name: menuservice
            port:
              number: 5064
      - path: /reservationservice
        pathType: Prefix
        backend:
          service:
            name: reservationservice
            port:
              number: 5065
      - path: /layoutservice   
        pathType: Prefix
        backend:
          service:
            name: layoutservice
            port:
              number: 5066                   
      - path: /authservice
        pathType: Prefix
        backend:
          service:
            name: authservice
            port:
              number: 5067
      - path: /adminservice
        pathType: Prefix
        backend:
          service:
            name: adminservice
            port:
              number: 5068

      - path: /weatherservice
        pathType: Prefix
        backend:
          service:
            name: weatherservice
            port:
              number: 5069              

      - path: /
        pathType: Prefix
        backend:
          service:
            name: tavernhelios-client-service
            port:
              number: 80

      - path: /.well-known/acme-challenge
        pathType: ImplementationSpecific
        backend:
          service:
            name: acme-challenge-service
            port:
              number: 80              
  tls:
  - hosts:
    - tavernhelios.duckdns.org
    secretName: heliostavern-tls
